Photo upload and delete functionality

--- a/ChatterBox.API/appsettings.json
+++ b/ChatterBox.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName":"dzb0xcf3t",
+    "ApiKey":"171862913594396",
+    "ApiSecret":"9LV7CdhXOazW2aGSHK_MGCmYzw4"
+  }
 }
